--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.15/tailwind.min.css"    >
     <title>Document</title>
 </head>
-<body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
+<body >
 
 <section class="text-gray-600 body-font relative">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-12">
-      <img src="https://" >
+      <div id="weatherimg">
+      </div>
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Search For Location's weather</h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify.</p>
     </div>
